Compatibilidade com Java >= 8